// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lineGridMode renders 0 1`] = `
Array [
  .c0 {
  line-grid-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridMode renders function 1`] = `
Array [
  .c0 {
  line-grid-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: has;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: has;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridMode renders invalid theme path 1`] = `
Array [
  .c0 {
  line-grid-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridMode renders negative number 1`] = `
Array [
  .c0 {
  line-grid-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridMode renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  line-grid-mode: July;
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid-mode: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: July;
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid-mode: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid-mode: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridMode renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    line-grid-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    line-grid-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid-mode: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid-mode: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridMode renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  line-grid-mode: July;
}

@media May {
  .c0 {
    line-grid-mode: August;
  }
}

@media April {
  .c0 {
    line-grid-mode: September;
  }
}

@media January {
  .c0 {
    line-grid-mode: November;
  }
}

@media April {
  .c0 {
    line-grid-mode: August;
  }
}

@media June {
  .c0 {
    line-grid-mode: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: July;
}

@media May {
  .c0 {
    line-grid-mode: August;
  }
}

@media April {
  .c0 {
    line-grid-mode: September;
  }
}

@media January {
  .c0 {
    line-grid-mode: November;
  }
}

@media April {
  .c0 {
    line-grid-mode: August;
  }
}

@media June {
  .c0 {
    line-grid-mode: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-grid-mode: November;
  }
}

@media April {
  .c0 {
    line-grid-mode: January;
  }
}

@media January {
  .c0 {
    line-grid-mode: December;
  }
}

@media April {
  .c0 {
    line-grid-mode: April;
  }
}

@media June {
  .c0 {
    line-grid-mode: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-grid-mode: November;
  }
}

@media April {
  .c0 {
    line-grid-mode: January;
  }
}

@media January {
  .c0 {
    line-grid-mode: December;
  }
}

@media April {
  .c0 {
    line-grid-mode: April;
  }
}

@media June {
  .c0 {
    line-grid-mode: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridMode renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    line-grid-mode: July;
  }
}

@media April {
  .c0 {
    line-grid-mode: August;
  }
}

@media January {
  .c0 {
    line-grid-mode: September;
  }
}

@media April {
  .c0 {
    line-grid-mode: November;
  }
}

@media June {
  .c0 {
    line-grid-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    line-grid-mode: July;
  }
}

@media April {
  .c0 {
    line-grid-mode: August;
  }
}

@media January {
  .c0 {
    line-grid-mode: September;
  }
}

@media April {
  .c0 {
    line-grid-mode: November;
  }
}

@media June {
  .c0 {
    line-grid-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-grid-mode: January;
  }
}

@media April {
  .c0 {
    line-grid-mode: December;
  }
}

@media January {
  .c0 {
    line-grid-mode: April;
  }
}

@media April {
  .c0 {
    line-grid-mode: May;
  }
}

@media June {
  .c0 {
    line-grid-mode: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-grid-mode: January;
  }
}

@media April {
  .c0 {
    line-grid-mode: December;
  }
}

@media January {
  .c0 {
    line-grid-mode: April;
  }
}

@media April {
  .c0 {
    line-grid-mode: May;
  }
}

@media June {
  .c0 {
    line-grid-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridMode renders postitive number 1`] = `
Array [
  .c0 {
  line-grid-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridMode renders string 1`] = `
Array [
  .c0 {
  line-grid-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: June;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: June;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridMode renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`lineGridMode renders valid theme path 1`] = `
Array [
  .c0 {
  line-grid-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
